set mo c params

--- a/app.env
+++ b/app.env
@@ -1,6 +1,24 @@
 APP_NAME=yatta-h3i
+APP_VERSION=1.0
 
-DB_DRIVER=mysql
 DB_SOURCE=root:password@tcp(127.0.0.1:3306)/yatta_h3i?charset=utf8mb4&parseTime=True&loc=Local
-DB_HOST=
-MT_URL=http://api.konten.in
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASS=password
+DB_NAME=yatta_h3i
+
+RABBITMQ_HOST=127.0.0.1
+RABBITMQ_PORT=5672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=admin1213)
+RABBITMQ_VHOST=/
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+URL_MT=http://api.konten.in
+URL_APK=https://demo.fortune360.mobi
+URL_POSTBACK=http://kbtools.net
+URL_NOTIF=https://tri.fortune360.mobi
