check error keyword

--- a/app.env
+++ b/app.env
@@ -18,7 +18,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-URL_MT=http://api.konten.in
-URL_APK=https://demo.fortune360.mobi
+LOG_MO=/logs/mo/
+LOG_MT=/logs/mt/
+LOG_DR=/logs/dr/
+LOG_RENEWAL=/logs/renewal/
+
+URL_MT=http://116.206.10.180:9003
 URL_POSTBACK=http://kbtools.net
 URL_NOTIF=https://tri.fortune360.mobi
+
+SYSTEM_ID=SD_210906_0180
+SYSTEM_PASS=y4tt43r4
